[package]
name = "MieiBotRandomSentences"
version = "0.1.0"
authors = ["RafaGnious <44097323+RafaGnious@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.101"
serde_json = "1.0"
serenity = "0.7.2"
rand = "0.7.2"